# upnotify

./: .gitignore  .goreleaser.yaml  Cargo.toml  dummy.go  justfile
.github/workflows/: release.yml
src/: main.rs
