[package]
name = "upnotify"
description = "A tool that prints to stdout when the status of a URL changes."
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["blocking", "native-tls-vendored"] }
http = "0.2"
clap = { version = "4.4.0", features = ["cargo"] }

[[bin]]
name = "upnotify"